--- a/package.json
+++ b/package.json
@@ -19,9 +19,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.5.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-daterangepicker": "^2.1.25",
+    "bootstrap-progressbar": "^0.9.0",
+    "bootstrap-sass": "^3.3.7",
+    "datatables.net": "^1.10.11",
+    "datatables.net-bs": "^1.10.11",
+    "datatables.net-buttons": "^1.1.2",
+    "datatables.net-buttons-bs": "^1.1.2",
+    "datatables.net-fixedheader": "^3.1.1",
+    "datatables.net-fixedheader-bs": "^3.1.1",
+    "datatables.net-keytable": "^2.1.1",
+    "datatables.net-responsive": "^2.0.2",
+    "datatables.net-responsive-bs": "^2.0.2",
+    "datatables.net-scroller": "^1.4.1",
+    "datatables.net-scroller-bs": "^1.4.1",
+    "echarts": "^3.4.0",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.0",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "moment": "^2.17.1"
   }
 }
