--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.0",
     "jquery": "^3.1.1",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "select2": "^4.0.3",
+    "select2-bootstrap-theme": "0.1.0-beta.9"
   }
 }
